--- a/frontend/Receptionist_UI.form
+++ b/frontend/Receptionist_UI.form
@@ -343,19 +343,47 @@
               </component>
             </children>
           </grid>
-          <grid id="6f5e7" binding="StudentPayment" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="6f5e7" binding="StudentPayment" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="8b43" class="javax.swing.JTextField" binding="studentPaymentTextField" default-binding="true">
-                <constraints border-constraint="Center"/>
+              <scrollpane id="44088">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
                 <properties>
-                  <text value="Student Payment"/>
+                  <horizontalScrollBarPolicy value="30"/>
                 </properties>
-              </component>
+                <border type="none"/>
+                <children>
+                  <component id="92a42" class="javax.swing.JTable" binding="PaymentRequestTable">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+              <grid id="812d8" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="df876" class="javax.swing.JButton" binding="AcceptPaymentButton">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Accept"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
           <grid id="3ca56" binding="UpdateProfile" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -651,7 +679,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="7b5fc" class="javax.swing.JButton" binding="RejectButton">
+                  <component id="7b5fc" class="javax.swing.JButton" binding="RejectRequestButton">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -659,7 +687,7 @@
                       <text value="Reject"/>
                     </properties>
                   </component>
-                  <component id="b1c8a" class="javax.swing.JButton" binding="ApproveButton">
+                  <component id="b1c8a" class="javax.swing.JButton" binding="ApproveRequestButton">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
